tests/10-invalid-attribute-assignment.stderr
error: expected `=`
  --> tests/10-invalid-attribute-assignment.rs:10:7
   |
10 |     #[builder(eac)]
   |       ^^^^^^^^^^^^
